# ceres_example

./: .gitignore  CMakeLists.txt  README.md  ceres_example.cpp  create_video.py  tutorial.md
libs/: prepare_deps.py
src/: CMakeLists.txt  ceres_example.cpp
